Add longurl expansion url plugin

Disable the unTiny plugin as this does the same thing, but better™

REVIEW: 121451
BUG: 294600
FIXED-IN: 1.5